Fix dropdown z-index

--- a/client/src/components/Game/Game.module.css
+++ b/client/src/components/Game/Game.module.css
@@ -46,6 +46,18 @@
   background: url("../../icons/settings.svg") center center / contain;
 }
 
+.dropdown {
+  background-color: #f0f0f0;
+  border: 1px solid #6f6f6f;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown label {
+  display: block;
+}
+
 .winnerModal {
   position: absolute;
   left: 0;
